--- a/Backend/book_inventory/requirements.txt
+++ b/Backend/book_inventory/requirements.txt
@@ -1,6 +1,16 @@
 asgiref==3.8.1
 Django==5.1.2
+django-cors-headers==4.6.0
+django-mysql==4.15.0
 djangorestframework==3.15.2
+drf-yasg==1.21.8
+inflection==0.5.1
+mysqlclient==2.2.5
+packaging==24.1
+pika==1.3.2
 python-decouple==3.8
+pytz==2024.2
+PyYAML==6.0.2
 sqlparse==0.5.1
 tzdata==2024.2
+uritemplate==4.1.1
