--- a/Backend/book_inventory/requirements.txt
+++ b/Backend/book_inventory/requirements.txt
@@ -5,9 +5,10 @@ django-mysql==4.15.0
 djangorestframework==3.15.2
 drf-yasg==1.21.8
 inflection==0.5.1
-mysqlclient==2.2.5
 packaging==24.1
 pika==1.3.2
+# psycopg2==2.9.10
+psycopg2-binary==2.9.10
 python-decouple==3.8
 pytz==2024.2
 PyYAML==6.0.2
